# Terminal-Payment-Simulator

./: CMakeLists.txt  FinalProject  LICENSE
Application/: Tests.c  app.c  app.h
Card/: card.c  card.h
Server/: server.c  server.h
Terminal/: terminal.c  terminal.h
